--- a/library-app/tsconfig.base.json
+++ b/library-app/tsconfig.base.json
@@ -10,13 +10,21 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@gov/form-controls": ["libs/gov-form-controls/src/index.ts"]
+      "@gov/form-controls": [
+        "node_modules/ngc-form-controls-library"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
