--- a/library-app/package.json
+++ b/library-app/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "ngc-form-controls-library": "^0.0.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
